--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Primeros pasos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    
+
     <form>
         <label for="nombre">Nombre:</label>
         <input id="nombre" type="text"/>
